# mylaps

./: CMakeLists.txt  README.md  format.sh  main.cpp
cmake/: googletest.cmake
data/: karttimes.csv
include/: Factory.h  IKart.h  IReader.h  RaceTrack.h  ReaderVisitor.h
include/mocks/: ReaderMock.h
src/: CMakeLists.txt
src/kart/: CMakeLists.txt  KartBase.cpp  KartBase.h  KartFactory.cpp  MyLapsKart.cpp  MyLapsKart.h
src/kart/test/: CMakeLists.txt  KartTest.cpp  TODO.txt
src/racetrack/: CMakeLists.txt  RaceTrack.cpp
src/racetrack/test/: CMakeLists.txt  RaceTrackTest.cpp  TODO.txt
src/reader/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  ReaderBase.cpp  ReaderBase.h  ReaderFactory.cpp
src/reader/test/: TODO.txt
